# ChangeLog for media-gfx/gthumb
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.179 2014/07/23 15:19:01 ago Exp $

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gthumb-3.2.8.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gthumb-3.2.8.ebuild:
  Stable for amd64, wrt bug #512912

*gthumb-3.2.8 (31 May 2014)

  31 May 2014; Pacho Ramos <pacho@gentoo.org> +gthumb-3.2.8.ebuild,
  -gthumb-3.2.6.ebuild:
  Version bump

  04 May 2014; Pacho Ramos <pacho@gentoo.org> gthumb-3.2.7.ebuild:
  x86 stable, bug 508862

  04 May 2014; Pacho Ramos <pacho@gentoo.org> gthumb-3.2.7.ebuild:
  amd64 stable, bug 508862

  18 Apr 2014; Pacho Ramos <pacho@gentoo.org> -gthumb-2.14.4.ebuild:
  Drop old

*gthumb-3.2.7 (29 Mar 2014)

  29 Mar 2014; Pacho Ramos <pacho@gentoo.org> +gthumb-3.2.7.ebuild,
  -gthumb-3.2.3.ebuild, -gthumb-3.2.4.ebuild:
  Version bump, drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> gthumb-3.2.6.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> gthumb-3.2.6.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> gthumb-3.2.6.ebuild:
  Fix wrong commit, bug 502160

*gthumb-3.2.6 (09 Feb 2014)

  09 Feb 2014; Pacho Ramos <pacho@gentoo.org> +gthumb-3.2.6.ebuild:
  Version bump

  26 Dec 2013; Markus Meier <maekke@gentoo.org> gthumb-3.2.4.ebuild:
  add ~arm, bug #489048

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> gthumb-3.2.4.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> gthumb-3.2.4.ebuild:
  amd64 stable, bug #478252

*gthumb-3.2.4 (15 Oct 2013)

  15 Oct 2013; Pacho Ramos <pacho@gentoo.org> +gthumb-3.2.4.ebuild,
  -files/gthumb-3.2.0-configure-option.patch, -gthumb-3.0.2.ebuild,
  -gthumb-3.2.2.ebuild:
  Version bump, drop old

  30 Aug 2013; Gilles Dartiguelongue <eva@gentoo.org> gthumb-3.2.2.ebuild,
  gthumb-3.2.3.ebuild: