@@ -1,1 +1,1 @@
-DIST gthumb-3.2.8.tar.xz 3286620 SHA256 d600aba747af551540f3bbae8e8afa1cc308c658d911318c98fd4bf52ecd61b8 SHA512 ceba260ec54ee4a48bc20e05face52c4ce7671ac3ea928ca6f4a78a79c28f03a0ee36bce3e89d4a5ff524362428ed72cd03d4f7c337e0595625b0205d1dbdd75 WHIRLPOOL 47f1da4f1b21ef075cdbbf6033ad6aed85625f94279fae055cb0d1d15314a6710417a50462d2eccd58bd3ef32ca273fd46cffb23b4d16cfede3d978098b95a29
+DIST gthumb-3.3.2.tar.xz 3282832 SHA256 66f6c6824fb209f7f2ae43a6923f3c796c1e06f451a1ab7d0d2988fe727e7a80 SHA512 39eb537e673e2d7e2952d9cbf2ca7dae143a1e409b176a5f3d919e519e96bc1f2ff253151acc19b6e0133479a9662b9643e6f5b041ca9b231919d9e5f7c6fa5e WHIRLPOOL 3a65df46c817dd8a343972f263d75a9ff1a62a0632298d51a7a04f5a9f976a6b60f8da4af3d8019f5afaaccd9f9f4d82cdd841d18c06735a350196e540cd5589
