@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>gnome</herd>
+	<maintainer>
+		<email>poncho@spahan.ch</email>
+		<name>Poncho</name>
+	</maintainer>
 	<use>
 		<flag name="http">Enable webservice integration through <pkg>net-libs/libsoup</pkg></flag>
 		<flag name="json">Compile code that uses the libjson-glib library</flag>
