@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.179 2014/07/23 15:19:01 ago Exp $
 
+*gthumb-3.3.2 (31 Aug 2014)
+
+  31 Aug 2014; Poncho <poncho@spahan.ch> +gthumb-3.3.2.ebuild,
+  -gthumb-3.2.8.ebuild, metadata.xml:
+  media-gfx/gthumb: version bump
+
   23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gthumb-3.2.8.ebuild:
   Stable for x86, wrt bug #512012
 
